# lua-x1

./: .gitignore  CMakeLists.txt  luaCMakeLists.txt
core/: CMakeLists.txt
core/src/: client_input.h  combat.h  config.h  deterministic_sim.cpp  entity_state.h  lua.hpp  lua_bridge.cpp  lua_bridge.h  main.cpp  map.cpp  map.h  physics.cpp  physics.h
core/src/net/: packets.h
docs/: architecture.md  buildCommands.md  protocols.md  readme-flash.txt  readme.txt  simulation.md
docs/tech/: lua_api.md
game/: game_defs.json
game/assets/maps/map_a_test/: generate_grid.py  map.json
game/scripts/abilities/: fireball_test.lua
tools/csharp/CharAbilityEditor/: App.xaml  App.xaml.cs  CharAbilityEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
tools/csharp/CharAbilityEditor/models/: AbilityDef.cs  CharDef.cs  GameDefinitions.cs
tools/csharp/CharAbilityEditor/scripts_src/: blink_test.lua  test_arcane_shield.lua  test_earth_grip.lua  test_ground_slam.lua  test_shadow_step.lua  test_spark_bolt.lua  test_stone_skin.lua  test_ultimate_overload.lua
tools/csharp/CharAbilityEditor/services/: JsonDatabase.cs  ScriptPusher.cs
tools/csharp/SimPreview/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SimPrewview.csproj  setup-dotnet.ps1
